<resources>
    <string name="app_name">bmail</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="username">Username</string>
    <string name="choose_profile_photo">Choose Profile Photo</string>
    <string name="avatar">avatar</string>
    <string name="sender_name">Sender Name</string>
    <string name="_12_34_pm">12:34 PM</string>
    <string name="mail_subject">Mail Subject</string>
    <string name="this_is_a_short_preview_of_the_email_message">This is a short preview of the email message…</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="compose">compose</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="all_labels">All labels</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="to">To:</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_photo">Change photo</string>
    <string name="personal_information">Personal information</string>
    <string name="account_information">Account information</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_changes">Save changes</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="star_email">Star email</string>
    <string name="sender_avatar">Sender Avatar</string>
    <string name="_5_30_2024">5/30/2024</string>
    <string name="me">me</string>
    <string name="email_content_goes_here_this_is_where_the_main_body_of_the_email_will_be_displayed_it_can_contain_multiple_paragraphs_and_will_scroll_if_the_content_is_long">Email content goes here. This is where the main body of the email will be displayed. It can contain multiple paragraphs and will scroll if the content is long.</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="forward">Forward</string>
    <string name="mail_title">Mail Title</string>
    <string name="change_label">Change Label</string>
    <string name="api">http://localhost:8080</string>
    <string name="labels">Labels</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="all_mail">All mail</string>
    <string name="bmail">Bmail</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="add_label">Add Label</string>
    <string name="label_name">Label name</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="mark_as_spam">Mark as Spam</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="mail_restored">Mail restored</string>
    <string name="mail_moved_to_trash">Mail moved to trash</string>
    <string name="change_labels">Change Labels</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="permanently_delete_this_email_this_action_cannot_be_undone">Permanently delete this email? This action cannot be undone.</string>
    <string name="mail_permanently_deleted">Mail permanently deleted</string>
    <string name="cancel">Cancel</string>
    <string name="restore_from_trash">Restore from Trash</string>
    <string name="move_to_trash">Move to Trash</string>
</resources>
